--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -1,5 +1,13 @@
 @import 'variables.scss';
 
+.wrapper-left {
+    display: inline-flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 50px;
+}
+
 .about {
     position: relative;
     height: 100vh;
