--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -9,7 +9,8 @@
         position: absolute;
         bottom: 0;
         height: auto;
-        width: 501px;
+        // width: 501px;
+        width: 37%;
     }
     
     p{
