--- a/src/assets/styles/projects.scss
+++ b/src/assets/styles/projects.scss
@@ -66,8 +66,8 @@
 }
 
 .project-workers-wrapper {
-    // position: absolute;
-    position: relative;
+    position: absolute;
+    // position: relative;
     bottom: 0;
     width: 712px;
     height: 635px;
