--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -14,6 +14,8 @@
     background-color: $gray-text-1;
 
     .wrapper {
+        display: flex;
+        flex-direction: column;
         padding: 40px;
         height: 100%;
 
@@ -34,15 +36,16 @@
             margin-left: 46px;
             margin-top: 42px;
             padding: 26px;
-            text-align: center;
+            text-align: left;
 
             p {
                 font-family: $josefin-sans;
                 font-weight: 200;
-                font-size: 26px;
+                font-size: 22px;
                 color: white;
                 cursor: default;
                 margin-bottom: 8px;
+                line-height: 1.3;
             }
         }
 
@@ -134,12 +137,10 @@
 
     .about-workers {
         position: absolute;
-        top: 0;
-        right: 0;
-        width: 500px;
-        height: 500px;
-        margin-top: 135px;
-        margin-right: 20px;
+        bottom: 0;
+        right: 40px;
+        height: 95.8%;
+        width: auto;
     }
 
     // endOf about
