--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -6,4 +6,4 @@ $baby-blue: #3AB4DD;
 
 $barlow: 'Barlow Semi Condensed', sans-serif;
 $montserrat: "Montserrat", sans-serif;
-$josefin-sans: "Josefin Sans", sans-serif;
+$josefin-sans: "Montserrat", sans-serif;
