--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -1,12 +1,5 @@
 @import 'variables.scss';
 
-.wrapper-left {
-    display: inline-flex;
-    height: 100%;
-    flex-direction: column;
-    justify-content: space-between;
-    padding-bottom: 50px;
-}
 
 .about {
     position: relative;
@@ -31,11 +24,6 @@
         .about-me {
             position: relative;
             display: inline-block;
-            width: 640px;
-            height: 222px;
-            margin-left: 46px;
-            margin-top: 42px;
-            padding: 26px;
             text-align: left;
 
             p {
@@ -52,9 +40,9 @@
         .skills {
             display: flex;
             flex-direction: column;
-            width: 721px;
-            margin-top: 20px;
-            margin-left: 32px;
+            // width: 721px;
+            // margin-top: 20px;
+            // margin-left: 32px;
 
             .top {
                 height: 38.5px;
@@ -135,13 +123,44 @@
         margin-right: 88px;
     }
 
-    .about-workers {
-        position: absolute;
-        bottom: 0;
-        right: 40px;
-        height: 95.8%;
-        width: auto;
-    }
+    // .about-workers {
+    //     position: absolute;
+    //     bottom: 0;
+    //     right: 40px;
+    //     height: 95.8%;
+    //     width: auto;
+    // }
 
     // endOf about
+}
+
+// .main-top {
+
+// }
+
+.main-bottom {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+
+    .about-left {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 70%;
+        padding-top: 100px;
+
+        .about-me {
+            width: 80%;
+        }
+    }
+
+    .about-workers-div {
+        display: flex;
+        flex: 1;
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
