--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -7,3 +7,7 @@ $baby-blue: #3AB4DD;
 $barlow: 'Barlow Semi Condensed', sans-serif;
 $montserrat: "Montserrat", sans-serif;
 $josefin-sans: "Montserrat", sans-serif;
+
+$responsive-xl: 1366px;
+$responsive-l: 1024px;
+$responsive-m: 850px;
